@@ -59,6 +59,11 @@ class AppSettings(object):
                              'allauth.socialaccount.adapter'
                              '.DefaultSocialAccountAdapter')
 
+    @property
+    def FORMS(self):
+        return self._setting('FORMS', {})
+
+
 # Ugly? Guido recommends this himself ...
 # http://mail.python.org/pipermail/python-ideas/2012-May/014969.html
 import sys
